
Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

NEXT
========================================
[THINGS THAT MAY BREAK YOUR CODE]
For a while, Mech used HTTP::Response::Encoding to try to suss out
the proper encoding of the page it receives.  Now, it lets
LWP::UserAgent do the work, and no longer requires
HTTP::Response::Encoding.

[DOCUMENTATION]
Added a few notes to the FAQ, and fixed some incorrect docs.


1.55_01     Mon Jul  6 12:17:10 CDT 2009
========================================
This is mostly a bug fix release.  There will be a number of other
bug fix releases in the next few days.

[FIXED]
New test server now randomizes the port it runs on.

t/cookies.t should not hang on Windows any more.

META.yml has been updated so the search.cpan.org links should be
correct.

Passing no_proxy would make LWP::UserAgent barf.  Thanks to Mike
Schilli for the fix.

Cookies test would fail under Windows.  Fixed, thanks to many people
reporting it.

[ENHANCEMENTS]
$mech->submit_form() now can specify the form by ID using the form_id
parameter.

[DOCUMENTATION]
The docs used to say that ->stack_depth(0) was an infinite stack
size.  This is wrong.  Zero will tell Mech not to keep any history.



1.54        Mon Jan 12 00:36:08 CST 2009
========================================
[FIXED]
Removed the computers4sure test that was failing.


1.52        Tue Nov 25 09:52:30 CST 2008
========================================
[FIXED]
Improved some error messages in $mech->submit_form().  Thanks to
Norbert Buchmuller.


1.51_03     Thu Nov 20 11:05:49 CST 2008
========================================
[FIXED]
The $mech->clone() method was not passing the cookie jar to its
clone properly.  Thanks to David Sainty.

The $mech->back() can fail if there's nothing on the stack to go
back to.  Thanks to Dave Page.

$mech->follow_link() did not complain if a link could not be found,